# computer-graphics-manual

./: README.md
back/: package.json
back/cpp/: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  main.cpp.bak  model.h  tgaimage.cpp  tgaimage.h
back/src/: convert.sh  server.js
front/: angular.json  package.json
front/src/: styles.scss
front/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
front/src/app/components/image/: image.component.html  image.component.scss
front/src/app/components/introduction/: introduction.component.html
front/src/app/components/line/: line.component.html  line.component.ts
front/src/app/components/rasterization/: rasterization.component.html  rasterization.component.ts
front/src/app/components/zbuffer/: zbuffer.component.html  zbuffer.component.spec.ts  zbuffer.component.ts
